namespace server.domain.pet_battle;

public static class PetBattleConstants
{
    public const int InitialRating = 1000;
    public const int RatingFloor = 0;
    public const int WinPoints = 10;
    public const int LossPoints = 5;
    public const int CooldownMinutes = 1;
    public const int MatchingRangeNarrow = 200;
    public const int MatchingRangeWide = 500;
    public const int TurnDeadlineSeconds = 60;
}
